--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,6 +8,12 @@
     overflow-y: auto; /* Content scrolls */
     padding: 0px; /* Padding for content */
     margin: 0;
+    background-color: rgb(243, 242, 248);
+    transition: background 0.3s ease;
+  }
+
+  .contentWrapper.darkTheme {
+    background-color: rgb(0 ,0 ,0);
   }
   
   /* Ensure no interference with sticky */
