--- a/src/Dashboard/Dashboard.module.css
+++ b/src/Dashboard/Dashboard.module.css
@@ -263,6 +263,9 @@
   justify-content: center;
   background: transparent;
   border-radius: 10px;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
   z-index: 10;
 }
 
@@ -271,7 +274,6 @@
 }
 
 .editHeaderButton:hover {
-  transform: scale(1.05);
 }
 
 .controls {
