--- a/src/Modal/Modal.module.css
+++ b/src/Modal/Modal.module.css
@@ -51,23 +51,23 @@
 }
 
 @keyframes fadeInMobile {
-  from { background: rgba(0, 0, 0, 0); }
-  to { background: rgba(0, 0, 0, 0.35); }
+  from { background: rgba(0, 0, 0, 0); backdrop-filter: blur(0px);}
+  to { background: rgba(0, 0, 0, 0.35); backdrop-filter: blur(10px);}
 }
 
 @keyframes fadeInMobileDark {
-  from { background: rgba(0, 0, 0, 0); }
-  to { background: rgba(0, 0, 0, 0.35); }
+  from { background: rgba(0, 0, 0, 0); backdrop-filter: blur(0px);}
+  to { background: rgba(0, 0, 0, 0.35); backdrop-filter: blur(10px);}
 }
 
 @keyframes fadeOutMobile {
-  from { background: rgba(0, 0, 0, 0.35); }
-  to { background: rgba(0, 0, 0, 0); }
+  from { background: rgba(0, 0, 0, 0.35); backdrop-filter: blur(10px);}
+  to { background: rgba(0, 0, 0, 0); backdrop-filter: blur(0px);}
 }
 
 @keyframes fadeOutMobileDark {
-  from { background: rgba(0, 0, 0, 0.35); }
-  to { background: rgba(0, 0, 0, 0); }
+  from { background: rgba(0, 0, 0, 0.35); backdrop-filter: blur(10px);}
+  to { background: rgba(0, 0, 0, 0); backdrop-filter: blur(0px);}
 }
 
 .modalContent {
